fix: resolve Spring Boot 4.0.6 upgrade issues, dependency conflicts, visibility and pattern constraints